--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,28 +1,23 @@
-.App {
-  text-align: center;
+.app__title { 
+  flex: 1;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.app__connect { 
+  top: 28px;
+  z-index: 10;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.app__container { 
+  height: calc(100vh - 56px);
 }
 
-.App-title {
-  font-size: 1.5em;
+.app__container > section { 
+  padding-top: calc(100vh - 56px) !important;
 }
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.app__container > section > div { 
+  border: 50px solid rgba(0, 0, 0, 0) !important;
+  width: 100vw !important;
+  height: 100vw !important;
+  top: calc(25% - 28px) !important;
 }
